website/tests/snapshots/types/conditional.exp
=== block 1 ===
No errors!

=== block 2 ===
No errors!

=== block 3 ===
No errors!

=== block 4 ===
No errors!

=== block 5 ===
No errors!

=== block 6 ===
No errors!

=== block 7 ===
No errors!

=== block 8 ===
Error -------------------------------------------------------------------------- -:6:17

Cannot instantiate `ReturnType` because in type argument `T`: string [1] is incompatible with function type [2].
[incompatible-type]

   -:6:17
   6| 1 as ReturnType<string>; // Error
                      ^^^^^^ [1]

References:
   -:2:27
   2| type ReturnType<T extends (...args: ReadonlyArray<empty>) => unknown> =
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Found 1 error

=== block 9 ===
Error --------------------------------------------------------------------------- -:7:1

Cannot cast `1` to `B` because number [1] is incompatible with boolean literal `false` [2]. [incompatible-type]

   -:7:1
   7| 1 as B; // ERROR: number is not false
      ^ [1]

References:
   -:7:6
   7| 1 as B; // ERROR: number is not false
           ^ [2]


Found 1 error

=== block 10 ===
Error -------------------------------------------------------------------------- -:11:1

Cannot cast `1` to `R2` because number [1] is incompatible with string [2]. [incompatible-type]

   -:11:1
   11| 1 as R2; // ERROR: number is not string
       ^ [1]

References:
   -:11:6
   11| 1 as R2; // ERROR: number is not string
            ^^ [2]


Found 1 error

=== block 11 ===
No errors!

=== block 12 ===
No errors!
